Lab2/src/main/java/grammer/secretSobakiParser.java
package grammer;// Generated from secretSobaki.g4 by ANTLR 4.3

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class secretSobakiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__13=1, T__12=2, T__11=3, T__10=4, T__9=5, T__8=6, T__7=7, T__6=8, T__5=9, 
		T__4=10, T__3=11, T__2=12, T__1=13, T__0=14, Int=15, String=16, VarName=17, 
		Num=18, StringValue=19, WS=20, Less=21, Greater=22, Equal=23;
	public static final String[] tokenNames = {
		"<INVALID>", "'{'", "'while'", "';'", "'++'", "'}'", "'goto'", "'='", 
		"'if'", "'@'", "'mainPrograms'", "'print'", "'('", "')'", "'not'", "'int'", 
		"'string'", "VarName", "Num", "StringValue", "WS", "'<'", "'>'", "'=='"
	};
	public static final int
		RULE_type = 0, RULE_intRightValue = 1, RULE_strRightValue = 2, RULE_varDeclaration = 3, 
		RULE_intVarDeclaration = 4, RULE_strVarDeclaration = 5, RULE_intVarAssign = 6, 
		RULE_strVarAssign = 7, RULE_compareInt = 8, RULE_compareStr = 9, RULE_compareOperation = 10, 
		RULE_not = 11, RULE_condition = 12, RULE_ifStatement = 13, RULE_print = 14, 
		RULE_gotoOperation = 15, RULE_increment = 16, RULE_loop = 17, RULE_sobaki = 18, 
		RULE_gotoLabel = 19, RULE_codeBlock = 20, RULE_program = 21;
	public static final String[] ruleNames = {
		"type", "intRightValue", "strRightValue", "varDeclaration", "intVarDeclaration", 
		"strVarDeclaration", "intVarAssign", "strVarAssign", "compareInt", "compareStr", 
		"compareOperation", "not", "condition", "ifStatement", "print", "gotoOperation", 
		"increment", "loop", "sobaki", "gotoLabel", "codeBlock", "program"
	};

	@Override
	public String getGrammarFileName() { return "secretSobaki.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public secretSobakiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(secretSobakiParser.String, 0); }
		public TerminalNode Int() { return getToken(secretSobakiParser.Int, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_la = _input.LA(1);
			if ( !(_la==Int || _la==String) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntRightValueContext extends ParserRuleContext {
		public TerminalNode Num() { return getToken(secretSobakiParser.Num, 0); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public IntRightValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intRightValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterIntRightValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitIntRightValue(this);
		}
	}

	public final IntRightValueContext intRightValue() throws RecognitionException {
		IntRightValueContext _localctx = new IntRightValueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_intRightValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_la = _input.LA(1);
			if ( !(_la==VarName || _la==Num) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrRightValueContext extends ParserRuleContext {
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public TerminalNode StringValue() { return getToken(secretSobakiParser.StringValue, 0); }
		public StrRightValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strRightValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterStrRightValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitStrRightValue(this);
		}
	}

	public final StrRightValueContext strRightValue() throws RecognitionException {
		StrRightValueContext _localctx = new StrRightValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_strRightValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_la = _input.LA(1);
			if ( !(_la==VarName || _la==StringValue) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); type();
			setState(51); match(WS);
			setState(52); match(VarName);
			setState(54);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(53); match(WS);
				}
			}

			setState(56); match(T__11);
			setState(58);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(57); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntVarDeclarationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public IntRightValueContext intRightValue() {
			return getRuleContext(IntRightValueContext.class,0);
		}
		public TerminalNode Int() { return getToken(secretSobakiParser.Int, 0); }
		public IntVarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intVarDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterIntVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitIntVarDeclaration(this);
		}
	}

	public final IntVarDeclarationContext intVarDeclaration() throws RecognitionException {
		IntVarDeclarationContext _localctx = new IntVarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intVarDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(Int);
			setState(61); match(WS);
			setState(62); match(VarName);
			setState(64);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(63); match(WS);
				}
			}

			setState(66); match(T__7);
			setState(68);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(67); match(WS);
				}
			}

			setState(70); intRightValue();
			setState(72);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(71); match(WS);
				}
			}

			setState(74); match(T__11);
			setState(76);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(75); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrVarDeclarationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode String() { return getToken(secretSobakiParser.String, 0); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public StrRightValueContext strRightValue() {
			return getRuleContext(StrRightValueContext.class,0);
		}
		public StrVarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strVarDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterStrVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitStrVarDeclaration(this);
		}
	}

	public final StrVarDeclarationContext strVarDeclaration() throws RecognitionException {
		StrVarDeclarationContext _localctx = new StrVarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_strVarDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); match(String);
			setState(79); match(WS);
			setState(80); match(VarName);
			setState(81); match(WS);
			setState(82); match(T__7);
			setState(83); match(WS);
			setState(84); strRightValue();
			setState(86);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(85); match(WS);
				}
			}

			setState(88); match(T__11);
			setState(90);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(89); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntVarAssignContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public IntRightValueContext intRightValue() {
			return getRuleContext(IntRightValueContext.class,0);
		}
		public IntVarAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intVarAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterIntVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitIntVarAssign(this);
		}
	}

	public final IntVarAssignContext intVarAssign() throws RecognitionException {
		IntVarAssignContext _localctx = new IntVarAssignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_intVarAssign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(VarName);
			setState(94);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(93); match(WS);
				}
			}

			setState(96); match(T__7);
			setState(98);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(97); match(WS);
				}
			}

			setState(100); intRightValue();
			setState(102);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(101); match(WS);
				}
			}

			setState(104); match(T__11);
			setState(106);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(105); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrVarAssignContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public StrRightValueContext strRightValue() {
			return getRuleContext(StrRightValueContext.class,0);
		}
		public StrVarAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strVarAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterStrVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitStrVarAssign(this);
		}
	}

	public final StrVarAssignContext strVarAssign() throws RecognitionException {
		StrVarAssignContext _localctx = new StrVarAssignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_strVarAssign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(VarName);
			setState(110);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(109); match(WS);
				}
			}

			setState(112); match(T__7);
			setState(114);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(113); match(WS);
				}
			}

			setState(116); strRightValue();
			setState(118);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(117); match(WS);
				}
			}

			setState(120); match(T__11);
			setState(122);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(121); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareIntContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public List<IntRightValueContext> intRightValue() {
			return getRuleContexts(IntRightValueContext.class);
		}
		public CompareOperationContext compareOperation() {
			return getRuleContext(CompareOperationContext.class,0);
		}
		public IntRightValueContext intRightValue(int i) {
			return getRuleContext(IntRightValueContext.class,i);
		}
		public CompareIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterCompareInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitCompareInt(this);
		}
	}

	public final CompareIntContext compareInt() throws RecognitionException {
		CompareIntContext _localctx = new CompareIntContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compareInt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); intRightValue();
			setState(126);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(125); match(WS);
				}
			}

			setState(128); compareOperation();
			setState(130);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(129); match(WS);
				}
			}

			setState(132); intRightValue();
			setState(134);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(133); match(WS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareStrContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public List<StrRightValueContext> strRightValue() {
			return getRuleContexts(StrRightValueContext.class);
		}
		public StrRightValueContext strRightValue(int i) {
			return getRuleContext(StrRightValueContext.class,i);
		}
		public CompareOperationContext compareOperation() {
			return getRuleContext(CompareOperationContext.class,0);
		}
		public CompareStrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareStr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterCompareStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitCompareStr(this);
		}
	}

	public final CompareStrContext compareStr() throws RecognitionException {
		CompareStrContext _localctx = new CompareStrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_compareStr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); strRightValue();
			setState(138);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(137); match(WS);
				}
			}

			setState(140); compareOperation();
			setState(142);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(141); match(WS);
				}
			}

			setState(144); strRightValue();
			setState(146);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				{
				setState(145); match(WS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareOperationContext extends ParserRuleContext {
		public TerminalNode Less() { return getToken(secretSobakiParser.Less, 0); }
		public TerminalNode Greater() { return getToken(secretSobakiParser.Greater, 0); }
		public TerminalNode Equal() { return getToken(secretSobakiParser.Equal, 0); }
		public CompareOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterCompareOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitCompareOperation(this);
		}
	}

	public final CompareOperationContext compareOperation() throws RecognitionException {
		CompareOperationContext _localctx = new CompareOperationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_compareOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Less) | (1L << Greater) | (1L << Equal))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotContext extends ParserRuleContext {
		public NotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_not; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitNot(this);
		}
	}

	public final NotContext not() throws RecognitionException {
		NotContext _localctx = new NotContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_not);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public CompareIntContext compareInt() {
			return getRuleContext(CompareIntContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public CompareStrContext compareStr() {
			return getRuleContext(CompareStrContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(152); not();
				}
			}

			setState(156);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(155); match(WS);
				}
			}

			setState(158); match(T__2);
			setState(160);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(159); match(WS);
				}
			}

			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,25,_ctx) ) {
			case 1:
				{
				setState(162); compareInt();
				}
				break;

			case 2:
				{
				setState(163); compareStr();
				}
				break;
			}
			setState(167);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(166); match(WS);
				}
			}

			setState(169); match(T__1);
			setState(171);
			switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
			case 1:
				{
				setState(170); match(WS);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitIfStatement(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); match(T__6);
			setState(174); match(WS);
			{
			setState(175); condition();
			}
			setState(176); codeBlock();
			setState(178);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(177); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode Num() { return getToken(secretSobakiParser.Num, 0); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public TerminalNode StringValue() { return getToken(secretSobakiParser.StringValue, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_print);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180); match(T__3);
			setState(182);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(181); match(WS);
				}
			}

			setState(184); match(T__2);
			setState(186);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(185); match(WS);
				}
			}

			setState(188);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VarName) | (1L << Num) | (1L << StringValue))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(190);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(189); match(WS);
				}
			}

			setState(192); match(T__1);
			setState(194);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(193); match(WS);
				}
			}

			setState(196); match(T__11);
			setState(198);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(197); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GotoOperationContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
		public GotoOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gotoOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).enterGotoOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof secretSobakiListener) ((secretSobakiListener)listener).exitGotoOperation(this);
		}
	}

	public final GotoOperationContext gotoOperation() throws RecognitionException {
		GotoOperationContext _localctx = new GotoOperationContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_gotoOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200); match(T__8);
			setState(201); match(WS);
			setState(202); match(VarName);
			setState(204);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(203); match(WS);
				}
			}

			setState(206); match(T__11);
			setState(208);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(207); match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncrementContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(secretSobakiParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(secretSobakiParser.WS); }
		public TerminalNode VarName() { return getToken(secretSobakiParser.VarName, 0); }
